--- a/fullstack-auth/k8s/Jenkinsfile
+++ b/fullstack-auth/k8s/Jenkinsfile
@@ -3,59 +3,14 @@ pipeline {
     node {
       label 'maven'
     }
-
   }
-  stages {
-    stage('拉取代码') {
-      agent none
-      steps {
-        sh 'echo 检出代码并构建模块 $MODULE_NAME $TAG_NAME_DEFAULT'
-        git(url: 'https://gitee.com/EmonCodingBackEnd/backend-fullstack-learning.git', credentialsId: 'gitee-id', branch: 'master', changelog: true, poll: false)
-      }
-    }
 
-    stage('构建并推送镜像') {
-      steps {
-        sh 'echo 构建并推送镜像到镜像仓库 $REGISTRY/$DOCKERHUB_NAMESPACE/$MODULE_NAME:$BRANCH_NAME-$BUILD_NUMBER'
-        container('maven') {
-          sh 'mvn -pl $MODULE_NAME -am clean package -DskipTests'
-          sh 'cd $MODULE_NAME && docker build -f k8s/Dockerfile -t $REGISTRY/$DOCKERHUB_NAMESPACE/$MODULE_NAME:$BRANCH_NAME-$BUILD_NUMBER .'
-          withCredentials([usernamePassword(passwordVariable : 'DOCKER_PASSWORD' ,usernameVariable : 'DOCKER_USERNAME' ,credentialsId : "$DOCKER_CREDENTIAL_ID")]) {
-            sh 'echo "$DOCKER_PASSWORD" | docker login $REGISTRY -u "$DOCKER_USERNAME" --password-stdin'
-            sh 'docker push $REGISTRY/$DOCKERHUB_NAMESPACE/$MODULE_NAME:$BRANCH_NAME-$BUILD_NUMBER'
-          }
-
-        }
-
-      }
-    }
-
-    stage('推送指定标签镜像') {
-      agent none
-      when {
-        expression {
-          return params.TAG_NAME =~ /v.*/ || params.TAG_NAME
-        }
-
-      }
-      steps {
-        container('maven') {
-          input(id: '发布指定标签的镜像', message: String.format('为镜像打指定标签 %s ?', params.TAG_NAME), ok: '确定')
-          withCredentials([usernamePassword(passwordVariable: 'GIT_PASSWORD', usernameVariable: 'GIT_USERNAME', credentialsId: "$GITHUB_CREDENTIAL_ID")]) {
-            sh 'git config --global user.email "kubesphere@yunify.com" '
-            sh 'git config --global user.name "kubesphere" '
-            sh 'git tag -a $TAG_NAME -m "$TAG_NAME" '
-            sh 'git push http://$GIT_USERNAME:$GIT_PASSWORD@gitee.com/$GITHUB_ACCOUNT_OR_ORG/backend-fullstack-learning.git --tags --ipv4'
-          }
-
-          sh 'docker tag $REGISTRY/$DOCKERHUB_NAMESPACE/$MODULE_NAME:$BRANCH_NAME-$BUILD_NUMBER $REGISTRY/$DOCKERHUB_NAMESPACE/$MODULE_NAME:$TAG_NAME '
-          sh 'docker push $REGISTRY/$DOCKERHUB_NAMESPACE/$MODULE_NAME:$TAG_NAME '
-        }
-
-      }
-    }
-
+  parameters {
+    choice(name: 'MODULE_NAME', choices: ['fullstack-auth','fullstack-cart','fullstack-coupon','fullstack-gateway','fullstack-member','fullstack-order','fullstack-product','fullstack-search','fullstack-seckill','fullstack-thirdparty','fullstack-ware','renren-fast'], description: '对于多模块项目，选择一个待构建的模块')
+    choice(name: 'BRANCH_NAME', choices: ['master','develop'], description: '请选择SCM分支')
+    string(name: 'TAG_NAME', defaultValue: '', description: 'SCM标签，指定后则为SCM和镜像打标签，比如：v1.0.0；不指定时默认yyyyMMddHHmm')
   }
+
   environment {
     DOCKER_CREDENTIAL_ID = 'harbor-id'
     GITHUB_CREDENTIAL_ID = 'gitee-id'
@@ -63,28 +18,128 @@ pipeline {
     REGISTRY = '192.168.32.116:30002'
     DOCKERHUB_NAMESPACE = 'ks-devops-harbor'
     GITHUB_ACCOUNT_OR_ORG = 'EmonCodingBackEnd'
+    TAG_NAME = "${!params.TAG_NAME ? (new Date()).format('yyyyMMddHHmm') : params.TAG_NAME}"
+    IMAGE = "$REGISTRY/$DOCKERHUB_NAMESPACE/$MODULE_NAME:$BRANCH_NAME-$BUILD_NUMBER-SNAPSHOT"
   }
-  post {
-    regression {
-      echo '部署异常！'
+
+  stages {
+    stage('拉取代码') {
+      steps {
+        sh 'printenv'
+        sh 'echo 检出代码并构建模块 $MODULE_NAME'
+        git(url: 'https://gitee.com/EmonCodingBackEnd/backend-fullstack-learning.git', credentialsId: 'gitee-id', branch: 'master', changelog: true, poll: false)
+      }
     }
 
+    stage('构建并推送快照镜像') {
+      steps {
+        sh 'echo 构建并推送快照镜像到镜像仓库 $IMAGE'
+        container('maven') {
+          sh 'mvn -pl $MODULE_NAME -am clean package -DskipTests'
+          sh 'cd $MODULE_NAME && docker build -f k8s/Dockerfile -t $IMAGE .'
+          withCredentials([usernamePassword(passwordVariable : 'DOCKER_PASSWORD' ,usernameVariable : 'DOCKER_USERNAME' ,credentialsId : "$DOCKER_CREDENTIAL_ID")]) {
+            sh 'echo "$DOCKER_PASSWORD" | docker login $REGISTRY -u "$DOCKER_USERNAME" --password-stdin'
+            sh 'docker push $IMAGE'
+          }
+        }
+      }
+    }
+
+    stage('构建并推送最新镜像'){
+      when{
+         branch 'master'
+      }
+      environment {
+        LASTED_IMAGE = "$REGISTRY/$DOCKERHUB_NAMESPACE/$MODULE_NAME:latest"
+      }
+      steps{
+        sh 'echo 构建并推送最新镜像到镜像仓库 $LASTED_IMAGE'
+        container ('maven') {
+          sh 'docker tag $IMAGE $LASTED_IMAGE'
+          sh 'docker push $LASTED_IMAGE'
+        }
+       }
+    }
+  
+    stage('部署到测试环境') {
+      steps {
+        input(id: 'deploy-to-k8s-test', message: String.format('是否部署模块 %s 的 %s 镜像到测试环境？', params.MODULE_NAME, env.IMAGE), ok: '确定')
+        container ('maven') {
+          withCredentials([
+              kubeconfigFile(
+              credentialsId: env.KUBECONFIG_CREDENTIAL_ID,
+              variable: 'KUBECONFIG')
+              ]) {
+              sh 'cd $MODULE_NAME && envsubst < k8s/k8s-deploy-test.yaml | kubectl apply -f -'
+              }
+        }
+      }
+    }
+        
+    stage('推送指定标签镜像') {
+      when {
+        branch 'master'
+        expression {
+          return params.TAG_NAME =~ /v.*/ || params.TAG_NAME
+        }
+      }
+      environment {
+        TAG_IMAGE = "$REGISTRY/$DOCKERHUB_NAMESPACE/$MODULE_NAME:$TAG_NAME"
+      }
+      steps {
+        sh 'echo 构建并推送指定标签镜像到镜像仓库 $TAG_IMAGE'
+        container('maven') {
+          input(id: '发布指定标签的镜像', message: String.format('为镜像打指定标签 %s ？', params.TAG_NAME), ok: '确定')
+          withCredentials([usernamePassword(passwordVariable: 'GIT_PASSWORD', usernameVariable: 'GIT_USERNAME', credentialsId: "$GITHUB_CREDENTIAL_ID")]) {
+            sh 'git config --global user.email "kubesphere@yunify.com" '
+            sh 'git config --global user.name "kubesphere" '
+            sh 'git tag -a $TAG_NAME -m "$TAG_NAME" '
+            sh 'git push http://$GIT_USERNAME:$GIT_PASSWORD@gitee.com/$GITHUB_ACCOUNT_OR_ORG/backend-fullstack-learning.git --tags --ipv4'
+          }
+  
+          sh 'docker tag $IMAGE $TAG_IMAGE '
+          sh 'docker push $TAG_IMAGE '
+        }
+      }
+    }
+    
+    stage('部署到生产环境') {
+      when {
+        branch 'master'
+        expression {
+          return params.TAG_NAME =~ /v.*/ || params.TAG_NAME
+        }
+      }
+      environment {
+        IMAGE = "$REGISTRY/$DOCKERHUB_NAMESPACE/$MODULE_NAME:$TAG_NAME"
+      }
+      steps {
+        sh 'printenv'
+        input(id: 'deploy-to-k8s-prod', message: String.format('是否部署模块 %s 的 %s 镜像到生产环境？', params.MODULE_NAME, env.IMAGE), ok: '确定')
+        container ('maven') {
+          withCredentials([
+              kubeconfigFile(
+              credentialsId: env.KUBECONFIG_CREDENTIAL_ID,
+              variable: 'KUBECONFIG')
+              ]) {
+              sh 'cd $MODULE_NAME && envsubst < k8s/k8s-deploy-prod.yaml | kubectl apply -f -'
+              }
+        }
+      }
+    }
+  }
+
+  post {
     aborted {
-      echo '部署中止！'
+      echo '中止！'
     }
 
     success {
-      echo '部署成功！'
+      echo '成功！'
     }
 
     failure {
-      echo '部署失败！'
+      echo '失败！'
     }
-
-  }
-  parameters {
-    choice(name: 'MODULE_NAME', choices: ['fullstack-auth','fullstack-cart','fullstack-coupon','fullstack-gateway','fullstack-member','fullstack-order','fullstack-product','fullstack-search','fullstack-seckill','fullstack-thirdparty','fullstack-ware','renren-fast'], description: '对于多模块项目，选择一个待构建的模块')
-    choice(name: 'BRANCH_NAME', choices: ['master','develop'], description: '请选择SCM分支')
-    string(name: 'TAG_NAME', defaultValue: '', description: 'SCM标签，指定后则为SCM和镜像打标签')
   }
 }
