--- a/fullstack-member/k8s/k8s-deploy-test.yaml
+++ b/fullstack-member/k8s/k8s-deploy-test.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: fullstack-ware
-  namespace: fsmall-prod
+  name: fullstack-member
+  namespace: fsmall-test
   labels:
-    app: fullstack-ware
+    app: fullstack-member
 spec:
   selector:
     matchLabels:
-      app: fullstack-ware
+      app: fullstack-member
   replicas: 1
   template:
     metadata:
       labels:
-        app: fullstack-ware
+        app: fullstack-member
     spec:
       containers:
-        - name: fullstack-ware
+        - name: fullstack-member
           image: $IMAGE
           ports:
             - containerPort: 8080
@@ -71,18 +71,18 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: fullstack-ware
-  namespace: fsmall-prod
+  name: fullstack-member
+  namespace: fsmall-test
   labels:
-    app: fullstack-ware
+    app: fullstack-member
 spec:
   ports:
     - name: http
       port: 8080
       protocol: TCP
       targetPort: 8080
-      nodePort: 20010
+      nodePort: 20005
   selector:
-    app: fullstack-ware
+    app: fullstack-member
   type: NodePort
   sessionAffinity: None
