--- a/fullstack-ware/k8s/k8s-deploy-test.yaml
+++ b/fullstack-ware/k8s/k8s-deploy-test.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: fullstack-ware
-  namespace: fsmall-prod
+  namespace: fsmall-test
   labels:
     app: fullstack-ware
 spec:
@@ -72,7 +72,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: fullstack-ware
-  namespace: fsmall-prod
+  namespace: fsmall-test
   labels:
     app: fullstack-ware
 spec:
