--- a/fullstack-auth/k8s/k8s-deploy.yaml
+++ b/fullstack-auth/k8s/k8s-deploy.yaml
@@ -1,23 +1,23 @@
-apiVersion: apps/v1
 kind: Deployment
+apiVersion: apps/v1
 metadata:
-  name: fullstack-product
-  namespace: fsmall-test
+  name: fullstack-auth
+  namespace: ${NAMESPACE}
   labels:
-    app: fullstack-product
+    app: fullstack-auth
 spec:
   selector:
     matchLabels:
-      app: fullstack-product
+      app: fullstack-auth
   replicas: 1
   template:
     metadata:
       labels:
-        app: fullstack-product
+        app: fullstack-auth
     spec:
       containers:
-        - name: fullstack-product
-          image: $IMAGE
+        - name: fullstack-auth
+          image: ${IMAGE}
           ports:
             - containerPort: 8080
           resources:
@@ -71,18 +71,18 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: fullstack-product
-  namespace: fsmall-test
+  name: fullstack-auth
+  namespace: ${NAMESPACE}
   labels:
-    app: fullstack-product
+    app: fullstack-auth
 spec:
   ports:
     - name: http
       port: 8080
       protocol: TCP
       targetPort: 8080
-      nodePort: 20007
+      nodePort: 20001
   selector:
-    app: fullstack-product
+    app: fullstack-auth
   type: NodePort
   sessionAffinity: None
