--- a/fullstack-cart/k8s/k8s-deploy.yaml
+++ b/fullstack-cart/k8s/k8s-deploy.yaml
@@ -1,8 +1,8 @@
-apiVersion: apps/v1
 kind: Deployment
+apiVersion: apps/v1
 metadata:
   name: fullstack-cart
-  namespace: fsmall-test
+  namespace: ${NAMESPACE}
   labels:
     app: fullstack-cart
 spec:
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: fullstack-cart
-          image: $IMAGE
+          image: ${IMAGE}
           ports:
             - containerPort: 8080
           resources:
@@ -68,11 +68,11 @@ spec:
   progressDeadlineSeconds: 600
 
 ---
-apiVersion: v1
 kind: Service
+apiVersion: v1
 metadata:
   name: fullstack-cart
-  namespace: fsmall-test
+  namespace: ${NAMESPACE}
   labels:
     app: fullstack-cart
 spec:
