--- a/renren-fast/k8s/k8s-deploy.yaml
+++ b/renren-fast/k8s/k8s-deploy.yaml
@@ -1,23 +1,23 @@
-apiVersion: apps/v1
 kind: Deployment
+apiVersion: apps/v1
 metadata:
-  name: fullstack-auth
-  namespace: fsmall-prod
+  name: renren-fast
+  namespace: ${NAMESPACE}
   labels:
-    app: fullstack-auth
+    app: renren-fast
 spec:
   selector:
     matchLabels:
-      app: fullstack-auth
+      app: renren-fast
   replicas: 1
   template:
     metadata:
       labels:
-        app: fullstack-auth
+        app: renren-fast
     spec:
       containers:
-        - name: fullstack-auth
-          image: $IMAGE
+        - name: renren-fast
+          image: ${IMAGE}
           ports:
             - containerPort: 8080
           resources:
@@ -68,21 +68,21 @@ spec:
   progressDeadlineSeconds: 600
 
 ---
-apiVersion: v1
 kind: Service
+apiVersion: v1
 metadata:
-  name: fullstack-auth
-  namespace: fsmall-prod
+  name: renren-fast
+  namespace: ${NAMESPACE}
   labels:
-    app: fullstack-auth
+    app: renren-fast
 spec:
   ports:
     - name: http
       port: 8080
       protocol: TCP
       targetPort: 8080
-      nodePort: 20001
+      nodePort: 20011
   selector:
-    app: fullstack-auth
+    app: renren-fast
   type: NodePort
   sessionAffinity: None
