--- a/fullstack-auth/k8s/Jenkinsfile
+++ b/fullstack-auth/k8s/Jenkinsfile
@@ -9,6 +9,7 @@ pipeline {
     choice(name: 'MODULE_NAME', choices: ['fullstack-auth','fullstack-cart','fullstack-coupon','fullstack-gateway','fullstack-member','fullstack-order','fullstack-product','fullstack-search','fullstack-seckill','fullstack-thirdparty','fullstack-ware','renren-fast'], description: '对于多模块项目，选择一个待构建的模块')
     choice(name: 'BRANCH_NAME', choices: ['master','develop'], description: '请选择SCM分支')
     string(name: 'TAG_NAME', defaultValue: '', description: 'SCM标签，指定后则为SCM和镜像打标签，比如：v1.0.0；不指定时默认yyyyMMddHHmm')
+    choice(name: 'DEPLOY_TO', choices: ['','fsmall-test','fsmall-prod'], description: '请选择部署环境，默认不部署')
   }
 
   environment {
@@ -45,7 +46,7 @@ pipeline {
       }
     }
 
-    stage('构建并推送最新镜像'){
+    stage('推送最新镜像'){
       when{
          branch 'master'
       }
@@ -62,6 +63,15 @@ pipeline {
     }
   
     stage('部署到测试环境') {
+      when {
+        expression {
+          return params.DEPLOY_TO
+        }
+      }
+      environment {
+        IMAGE = "$IMAGE"
+        NAMESPACE = "$DEPLOY_TO"
+      }
       steps {
         input(id: 'deploy-to-k8s-test', message: String.format('是否部署模块 %s 的 %s 镜像到测试环境？', params.MODULE_NAME, env.IMAGE), ok: '确定')
         container ('maven') {
@@ -70,7 +80,7 @@ pipeline {
               credentialsId: env.KUBECONFIG_CREDENTIAL_ID,
               variable: 'KUBECONFIG')
               ]) {
-              sh 'cd $MODULE_NAME && envsubst < k8s/k8s-deploy-test.yaml | kubectl apply -f -'
+              sh 'cd $MODULE_NAME && envsubst < k8s/k8s-deploy.yaml | kubectl apply -f -'
               }
         }
       }
@@ -80,7 +90,7 @@ pipeline {
       when {
         branch 'master'
         expression {
-          return params.TAG_NAME =~ /v.*/ || params.TAG_NAME
+          return env.TAG_NAME =~ /v.*/ || env.TAG_NAME
         }
       }
       environment {
@@ -89,7 +99,7 @@ pipeline {
       steps {
         sh 'echo 构建并推送指定标签镜像到镜像仓库 $TAG_IMAGE'
         container('maven') {
-          input(id: '发布指定标签的镜像', message: String.format('为镜像打指定标签 %s ？', params.TAG_NAME), ok: '确定')
+          input(id: '发布指定标签的镜像', message: String.format('为镜像打指定标签 %s ？', env.TAG_NAME), ok: '确定')
           withCredentials([usernamePassword(passwordVariable: 'GIT_PASSWORD', usernameVariable: 'GIT_USERNAME', credentialsId: "$GITHUB_CREDENTIAL_ID")]) {
             sh 'git config --global user.email "kubesphere@yunify.com" '
             sh 'git config --global user.name "kubesphere" '
@@ -107,11 +117,12 @@ pipeline {
       when {
         branch 'master'
         expression {
-          return params.TAG_NAME =~ /v.*/ || params.TAG_NAME
+          return params.DEPLOY_TO && (env.TAG_NAME =~ /v.*/ || env.TAG_NAME)
         }
       }
       environment {
         IMAGE = "$REGISTRY/$DOCKERHUB_NAMESPACE/$MODULE_NAME:$TAG_NAME"
+        NAMESPACE = "$DEPLOY_TO"
       }
       steps {
         sh 'printenv'
@@ -122,7 +133,7 @@ pipeline {
               credentialsId: env.KUBECONFIG_CREDENTIAL_ID,
               variable: 'KUBECONFIG')
               ]) {
-              sh 'cd $MODULE_NAME && envsubst < k8s/k8s-deploy-prod.yaml | kubectl apply -f -'
+              sh 'cd $MODULE_NAME && envsubst < k8s/k8s-deploy.yaml | kubectl apply -f -'
               }
         }
       }
