--- a/fullstack-product/k8s/Dockerfile
+++ b/fullstack-product/k8s/Dockerfile
@@ -5,4 +5,4 @@ EXPOSE 8080
 VOLUME /tmp
 ADD target/*.jar  /app.jar
 RUN sh -c 'touch /app.jar'
-ENTRYPOINT ["java","-jar","/app.jar", "--spring.profiles.active=prod"]
+ENTRYPOINT ["java","-jar","/app.jar"]
