--- a/fullstack-ware/k8s/k8s-deploy.yaml
+++ b/fullstack-ware/k8s/k8s-deploy.yaml
@@ -31,6 +31,9 @@ spec:
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           imagePullPolicy: IfNotPresent
+          env:
+            - name: JAVA_TOOL_OPTIONS
+              value: "-Xms100m -Xmx100m -Xmn64m -Xss228k -XX:MetaspaceSize=64m -Dspring.profiles.active=prod"
           # 存活状态检查
           livenessProbe:
             httpGet:
@@ -61,9 +64,9 @@ spec:
       terminationGracePeriodSeconds: 30
   strategy:
     type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 25%
-      maxSurge: 25%
+   rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   revisionHistoryLimit: 10
   progressDeadlineSeconds: 600
 
