--- a/fullstack-auth/src/main/resources/application.properties
+++ b/fullstack-auth/src/main/resources/application.properties
@@ -14,6 +14,14 @@ spring.thymeleaf.cache=false
 #thread.pool.queue-size=100000
 # ==================================================\u57FA\u7840\u914D\u7F6E end
 #
+# ==================================================\u6CE8\u518C\u4E2D\u5FC3 beg
+spring.cloud.nacos.discovery.server-addr=repo.emon.vip:8848
+# ==================================================\u6CE8\u518C\u4E2D\u5FC3 end
+#
+# ==================================================\u914D\u7F6E\u4E2D\u5FC3 beg
+spring.config.import[0]=nacos:fullstack-auth.properties?refresh=true
+# ==================================================\u914D\u7F6E\u4E2D\u5FC3 end
+#
 # ==================================================\u6570\u636E\u6E90 beg
 #spring.datasource.username=root
 #spring.datasource.password=root123
