--- a/fullstack-auth/src/main/resources/application-prod.properties
+++ b/fullstack-auth/src/main/resources/application-prod.properties
@@ -3,6 +3,14 @@ server.port=8080
 spring.thymeleaf.cache=true
 # ==================================================\u57FA\u7840\u914D\u7F6E end
 #
+# ==================================================\u6CE8\u518C\u4E2D\u5FC3 beg
+spring.cloud.nacos.discovery.server-addr=nacos.fsmall-project:8848
+# ==================================================\u6CE8\u518C\u4E2D\u5FC3 end
+#
+# ==================================================\u914D\u7F6E\u4E2D\u5FC3 beg
+spring.cloud.nacos.config.group=prod
+# ==================================================\u914D\u7F6E\u4E2D\u5FC3 end
+#
 # ==================================================redis beg
 spring.redis.host=redis.fsmall-project
 # ==================================================redis beg
