--- a/fullstack-auth/src/main/resources/application.properties
+++ b/fullstack-auth/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.cloud.nacos.discovery.server-addr=repo.emon.vip:8848
 # ==================================================\u6CE8\u518C\u4E2D\u5FC3 end
 #
 # ==================================================\u914D\u7F6E\u4E2D\u5FC3 beg
+spring.cloud.nacos.config.group=dev
 spring.config.import[0]=nacos:fullstack-auth.properties?refresh=true
 # ==================================================\u914D\u7F6E\u4E2D\u5FC3 end
 #
