--- a/fullstack-auth/src/main/resources/application.properties
+++ b/fullstack-auth/src/main/resources/application.properties
@@ -15,10 +15,11 @@ spring.thymeleaf.cache=false
 # ==================================================\u57FA\u7840\u914D\u7F6E end
 #
 # ==================================================\u6CE8\u518C\u4E2D\u5FC3 beg
-spring.cloud.nacos.discovery.server-addr=repo.emon.vip:8848
+spring.cloud.nacos.discovery.server-addr=192.168.32.116:31748
 # ==================================================\u6CE8\u518C\u4E2D\u5FC3 end
 #
 # ==================================================\u914D\u7F6E\u4E2D\u5FC3 beg
+spring.cloud.nacos.config.server-addr=192.168.32.116:31748
 spring.cloud.nacos.config.group=dev
 spring.config.import[0]=nacos:fullstack-auth.properties?refresh=true
 # ==================================================\u914D\u7F6E\u4E2D\u5FC3 end
@@ -26,15 +27,15 @@ spring.config.import[0]=nacos:fullstack-auth.properties?refresh=true
 # ==================================================\u6570\u636E\u6E90 beg
 #spring.datasource.username=root
 #spring.datasource.password=root123
-#spring.datasource.url=jdbc:mysql://repo.emon.vip:3306/gulimall_oms?characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+#spring.datasource.url=jdbc:mysql://192.168.32.116:3306/gulimall_oms?characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #mybatis-plus.mapper-locations=classpath:mapper/**/*.xml
 #mybatis-plus.global-config.db-config.id-type=auto
 # ==================================================\u6570\u636E\u6E90 end
 #
 # ==================================================redis beg
-spring.redis.host=repo.emon.vip
-spring.redis.port=6379
+spring.redis.host=192.168.32.116
+spring.redis.port=30598
 spring.redis.password=redis123
 spring.redis.database=0
 spring.redis.timeout=3000ms
@@ -53,8 +54,8 @@ server.servlet.session.timeout=30m
 # ==================================================redis beg
 #
 # ==================================================RabbitMQ beg
-#spring.rabbitmq.host=repo.emon.vip
-#spring.rabbitmq.port=5672
+#spring.rabbitmq.host=192.168.32.116
+#spring.rabbitmq.port=30295
 #spring.rabbitmq.virtual-host=/
 #spring.rabbitmq.username=rabbit
 #spring.rabbitmq.password=rabbit123
@@ -74,12 +75,12 @@ seata.enabled=false
 # \u4E8B\u52A1\u670D\u52A1\u5206\u7EC4\uFF0C\u9ED8\u8BA4\u662F default_tx_group
 #seata.tx-service-group=auth
 #seata.service.vgroup-mapping.auth=default
-#seata.service.grouplist.default=repo.emon.vip:8091
+#seata.service.grouplist.default=192.168.32.116:8091
 # ==================================================seata end
 # ==================================================sentinel beg
 # \u662F\u5426\u5BF9\u8BF7\u6C42url\u4FDD\u62A4\uFF0C\u9ED8\u8BA4true
 spring.cloud.sentinel.filter.enabled=true
-spring.cloud.sentinel.transport.dashboard=repo.emon.vip:8791
+spring.cloud.sentinel.transport.dashboard=192.168.32.116:30106
 spring.cloud.sentinel.datasource.flow.nacos.rule-type=flow
 spring.cloud.sentinel.datasource.flow.nacos.server-addr=${spring.cloud.nacos.config.server-addr}
 spring.cloud.sentinel.datasource.flow.nacos.group-id=SENTINEL_GROUP
@@ -93,7 +94,7 @@ feign.sentinel.enabled=true
 # ==================================================sentinel end
 # ==================================================zipkin beg
 ## zipkin\u670D\u52A1\u5668\u7684\u5730\u5740
-#spring.zipkin.base-url=http://repo.emon.vip:9411
+#spring.zipkin.base-url=http://192.168.32.116:9411
 ## \u5173\u95ED\u670D\u52A1\u53D1\u73B0\uFF0C\u5426\u5219Spring Cloud\u4F1A\u628Azipkin\u7684url\u5F53\u505A\u670D\u52A1\u540D\u79F0
 #spring.zipkin.discovery-client-enabled=false
 ## \u8BBE\u7F6E\u4F7F\u7528http\u7684\u65B9\u5F0F\u4F20\u8F93\u6570\u636E
