--- a/fullstack-seckill/src/main/resources/application.properties
+++ b/fullstack-seckill/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.thymeleaf.cache=false
 # \u5F02\u6B65\u4EFB\u52A1
 spring.task.execution.pool.core-size=5
 spring.task.execution.pool.max-size=50
+#management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
 # ==================================================\u57FA\u7840\u914D\u7F6E end
 #
 # ==================================================\u6CE8\u518C\u4E2D\u5FC3 beg
