--- a/fullstack-thirdparty/src/main/resources/application-prod.properties
+++ b/fullstack-thirdparty/src/main/resources/application-prod.properties
@@ -9,6 +9,7 @@ spring.cloud.nacos.discovery.server-addr=nacos.fsmall-project:8848
 #
 # ==================================================\u914D\u7F6E\u4E2D\u5FC3 beg
 spring.cloud.nacos.config.server-addr=nacos.fsmall-project:8848
+spring.cloud.nacos.config.namespace=fullstack-thirdparty
 spring.cloud.nacos.config.group=prod
 # ==================================================\u914D\u7F6E\u4E2D\u5FC3 end
 #
