--- a/fullstack-thirdparty/src/main/resources/application.properties
+++ b/fullstack-thirdparty/src/main/resources/application.properties
@@ -1,13 +1,35 @@
-seata.enabled=false
-server.port=19999
+# ==================================================\u57FA\u7840\u914D\u7F6E beg
 spring.application.name=fullstack-thirdparty
-# \u6CE8\u518C\u4E2D\u5FC3
-spring.cloud.nacos.discovery.server-addr=repo.emon.vip:8848
+server.port=19999
+logging.level.com.coding.fullstack.auth.dao=debug
+# jackson
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=Asia/Shanghai
+# thymeleaf
+spring.thymeleaf.cache=false
+# \u7EBF\u7A0B\u6C60
+#thread.pool.core-size=10
+#thread.pool.max-size=200
+#thread.pool.keep-alive-time=10
+#thread.pool.queue-size=100000
+#management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+# ==================================================\u57FA\u7840\u914D\u7F6E end#
+# ==================================================\u6CE8\u518C\u4E2D\u5FC3 beg
+spring.cloud.nacos.discovery.server-addr=192.168.32.116:31748
+# ==================================================\u6CE8\u518C\u4E2D\u5FC3 end
+#
+# ==================================================\u914D\u7F6E\u4E2D\u5FC3 beg
 # \u914D\u7F6E\u4E2D\u5FC3\uFF0Cimport[index]\u7D22\u5F15\u9AD8\u7684\u4F18\u5148\u7EA7\u9AD8\uFF01\uFF01\uFF01
-spring.cloud.nacos.config.server-addr=repo.emon.vip:8848
+spring.cloud.nacos.config.server-addr=192.168.32.116:31748
 spring.cloud.nacos.config.namespace=fullstack-thirdparty
 spring.cloud.nacos.config.group=dev
 spring.config.import[0]=nacos:fullstack-thirdparty.yml?refresh=true&group=dev
+# ==================================================\u914D\u7F6E\u4E2D\u5FC3 end
+#
+# ==================================================OSS\u5B58\u50A8 beg
+#
+seata.enabled=false
 # \u963F\u91CC\u4E91OSS\u5B58\u50A8
 alibaba.cloud.access-key=${OSS_ACCESS_KEY_ID}
 alibaba.cloud.secret-key=${OSS_ACCESS_KEY_SECRET}
@@ -19,6 +41,8 @@ alibaba.cloud.path=/sms/smsSend
 alibaba.cloud.sms-sign-id=2e65b1bb3d054466b82f0c9d125465e2
 alibaba.cloud.template-id=908e94ccf08b4476ba6c876d13f084ad
 alibaba.cloud.appcode=e9966259394547938f494a414ad77aa2
+# ==================================================OSS\u5B58\u50A8 end
+#
 # ==================================================sentinel beg
 # \u662F\u5426\u5BF9\u8BF7\u6C42url\u4FDD\u62A4\uFF0C\u9ED8\u8BA4true
 spring.cloud.sentinel.filter.enabled=true
