--- a/fullstack-auth/src/main/resources/application.properties
+++ b/fullstack-auth/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.thymeleaf.cache=false
 #thread.pool.max-size=200
 #thread.pool.keep-alive-time=10
 #thread.pool.queue-size=100000
-management.endpoints.web.exposure.include=health
-#management.endpoint.health.show-details=always
+#management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
 # ==================================================\u57FA\u7840\u914D\u7F6E end
 #
 # ==================================================\u6CE8\u518C\u4E2D\u5FC3 beg
