--- a/fullstack-cart/src/main/resources/application.properties
+++ b/fullstack-cart/src/main/resources/application.properties
@@ -12,6 +12,8 @@ thread.pool.core-size=10
 thread.pool.max-size=200
 thread.pool.keep-alive-time=10
 thread.pool.queue-size=100000
+#management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
 # ==================================================\u57FA\u7840\u914D\u7F6E end
 #
 # ==================================================\u6CE8\u518C\u4E2D\u5FC3 beg
