--- a/fullstack-cart/src/main/resources/application.properties
+++ b/fullstack-cart/src/main/resources/application.properties
@@ -17,11 +17,12 @@ management.endpoint.health.show-details=always
 # ==================================================\u57FA\u7840\u914D\u7F6E end
 #
 # ==================================================\u6CE8\u518C\u4E2D\u5FC3 beg
-spring.cloud.nacos.discovery.server-addr=repo.emon.vip:8848
+spring.cloud.nacos.discovery.server-addr=192.168.32.116:31748
 # ==================================================\u6CE8\u518C\u4E2D\u5FC3 end
 #
 # ==================================================\u914D\u7F6E\u4E2D\u5FC3 beg
-spring.cloud.nacos.config.server-addr=repo.emon.vip:8848
+spring.cloud.nacos.config.server-addr=192.168.32.116:31748
+spring.cloud.nacos.config.group=dev
 spring.config.import[0]=nacos:fullstack-cart.properties?refresh=true
 # ==================================================\u914D\u7F6E\u4E2D\u5FC3 end
 #
@@ -35,8 +36,8 @@ spring.config.import[0]=nacos:fullstack-cart.properties?refresh=true
 # ==================================================\u6570\u636E\u6E90 end
 #
 # ==================================================redis beg
-spring.redis.host=repo.emon.vip
-spring.redis.port=6379
+spring.redis.host=192.168.32.116
+spring.redis.port=30598
 spring.redis.password=redis123
 spring.redis.database=0
 spring.redis.timeout=3000ms
@@ -81,7 +82,7 @@ seata.enabled=false
 # ==================================================sentinel beg
 # \u662F\u5426\u5BF9\u8BF7\u6C42url\u4FDD\u62A4\uFF0C\u9ED8\u8BA4true
 spring.cloud.sentinel.filter.enabled=true
-spring.cloud.sentinel.transport.dashboard=repo.emon.vip:8791
+spring.cloud.sentinel.transport.dashboard=192.168.32.116:30106
 spring.cloud.sentinel.datasource.flow.nacos.rule-type=flow
 spring.cloud.sentinel.datasource.flow.nacos.server-addr=${spring.cloud.nacos.config.server-addr}
 spring.cloud.sentinel.datasource.flow.nacos.group-id=SENTINEL_GROUP
