--- a/fullstack-member/src/main/resources/application.properties
+++ b/fullstack-member/src/main/resources/application.properties
@@ -17,26 +17,27 @@ management.endpoint.health.show-details=always
 # ==================================================\u57FA\u7840\u914D\u7F6E end
 #
 # ==================================================\u6CE8\u518C\u4E2D\u5FC3 beg
-spring.cloud.nacos.discovery.server-addr=repo.emon.vip:8848
+spring.cloud.nacos.discovery.server-addr=192.168.32.116:31748
 # ==================================================\u6CE8\u518C\u4E2D\u5FC3 end
 #
 # ==================================================\u914D\u7F6E\u4E2D\u5FC3 beg
-spring.cloud.nacos.config.server-addr=repo.emon.vip:8848
+spring.cloud.nacos.config.server-addr=192.168.32.116:31748
+spring.cloud.nacos.config.group=dev
 spring.config.import[0]=nacos:fullstack-member.properties?refresh=true
 # ==================================================\u914D\u7F6E\u4E2D\u5FC3 end
 #
 # ==================================================\u6570\u636E\u6E90 beg
 spring.datasource.username=root
 spring.datasource.password=root123
-spring.datasource.url=jdbc:mysql://repo.emon.vip:3306/gulimall_ums?characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://192.168.32.116:31373/gulimall_ums?characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis-plus.mapper-locations=classpath:mapper/**/*.xml
 mybatis-plus.global-config.db-config.id-type=auto
 # ==================================================\u6570\u636E\u6E90 end
 #
 # ==================================================redis beg
-spring.redis.host=repo.emon.vip
-spring.redis.port=6379
+spring.redis.host=192.168.32.116
+spring.redis.port=30598
 spring.redis.password=redis123
 spring.redis.database=0
 spring.redis.timeout=3000ms
@@ -56,7 +57,7 @@ server.servlet.session.timeout=30m
 #
 # ==================================================RabbitMQ beg
 #spring.rabbitmq.host=repo.emon.vip
-#spring.rabbitmq.port=5672
+#spring.rabbitmq.port=30235
 #spring.rabbitmq.virtual-host=/
 #spring.rabbitmq.username=rabbit
 #spring.rabbitmq.password=rabbit123
@@ -81,7 +82,7 @@ seata.enabled=false
 # ==================================================sentinel beg
 # \u662F\u5426\u5BF9\u8BF7\u6C42url\u4FDD\u62A4\uFF0C\u9ED8\u8BA4true
 spring.cloud.sentinel.filter.enabled=true
-spring.cloud.sentinel.transport.dashboard=repo.emon.vip:8791
+spring.cloud.sentinel.transport.dashboard=192.168.32.116:30106
 spring.cloud.sentinel.datasource.flow.nacos.rule-type=flow
 spring.cloud.sentinel.datasource.flow.nacos.server-addr=${spring.cloud.nacos.config.server-addr}
 spring.cloud.sentinel.datasource.flow.nacos.group-id=SENTINEL_GROUP
