--- a/fullstack-cart/src/main/resources/application.properties
+++ b/fullstack-cart/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.config.import[0]=nacos:fullstack-cart.properties?refresh=true
 # ==================================================\u6570\u636E\u6E90 beg
 #spring.datasource.username=root
 #spring.datasource.password=root123
-#spring.datasource.url=jdbc:mysql://repo.emon.vip:3306/gulimall_oms?characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+#spring.datasource.url=jdbc:mysql://192.168.32.116:31373/gulimall_oms?characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #mybatis-plus.mapper-locations=classpath:mapper/**/*.xml
 #mybatis-plus.global-config.db-config.id-type=auto
@@ -57,7 +57,7 @@ server.servlet.session.timeout=30m
 #
 # ==================================================RabbitMQ beg
 #spring.rabbitmq.host=repo.emon.vip
-#spring.rabbitmq.port=5672
+#spring.rabbitmq.port=30235
 #spring.rabbitmq.virtual-host=/
 #spring.rabbitmq.username=rabbit
 #spring.rabbitmq.password=rabbit123
