--- a/fullstack-member/src/main/resources/application-prod.properties
+++ b/fullstack-member/src/main/resources/application-prod.properties
@@ -18,6 +18,7 @@ spring.datasource.url=jdbc:mysql://mysql-master.fsmall-project:3306/gulimall_ums
 #
 # ==================================================redis beg
 spring.redis.host=redis.fsmall-project
+spring.redis.port=6379
 # ==================================================redis beg
 #
 # ==================================================sentinel beg
