--- a/fullstack-order/src/main/resources/application-prod.properties
+++ b/fullstack-order/src/main/resources/application-prod.properties
@@ -18,12 +18,12 @@ spring.datasource.url=jdbc:mysql://mysql-master.fsmall-project:3306/gulimall_oms
 #
 # ==================================================redis beg
 spring.redis.host=redis.fsmall-project
+spring.redis.port=6379
 # ==================================================redis beg
 #
 # ==================================================RabbitMQ beg
 spring.rabbitmq.host=rabbitmq.fsmall-project
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.port=5672
 # ==================================================RabbitMQ end
 #
 # ==================================================sentinel beg
