--- a/fullstack-search/src/main/resources/application-prod.properties
+++ b/fullstack-search/src/main/resources/application-prod.properties
@@ -14,6 +14,7 @@ spring.cloud.nacos.config.group=prod
 #
 # ==================================================redis beg
 spring.redis.host=redis.fsmall-project
+spring.redis.port=6379
 # ==================================================redis beg
 #
 # ==================================================sentinel beg
