--- a/fullstack-seckill/src/main/resources/application-prod.properties
+++ b/fullstack-seckill/src/main/resources/application-prod.properties
@@ -14,12 +14,12 @@ spring.cloud.nacos.config.group=prod
 #
 # ==================================================redis beg
 spring.redis.host=redis.fsmall-project
+spring.redis.port=6379
 # ==================================================redis beg
 #
 # ==================================================RabbitMQ beg
 spring.rabbitmq.host=rabbitmq.fsmall-project
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.port=5672
 # ==================================================RabbitMQ end
 #
 # ==================================================sentinel beg
