--- a/fullstack-ware/src/main/resources/application-prod.properties
+++ b/fullstack-ware/src/main/resources/application-prod.properties
@@ -18,8 +18,7 @@ spring.datasource.url=jdbc:mysql://mysql-master.fsmall-project:3306/gulimall_wms
 #
 # ==================================================RabbitMQ beg
 spring.rabbitmq.host=rabbitmq.fsmall-project
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.port=5672
 # ==================================================RabbitMQ end
 #
 # ==================================================sentinel beg
