--- a/fullstack-order/src/main/resources/application.properties
+++ b/fullstack-order/src/main/resources/application.properties
@@ -87,7 +87,7 @@ seata.enabled=false
 # \u4E8B\u52A1\u670D\u52A1\u5206\u7EC4\uFF0C\u9ED8\u8BA4\u662F default_tx_group
 seata.tx-service-group=order
 seata.service.vgroup-mapping.order=default
-seata.service.grouplist.default=repo.emon.vip:8091
+seata.service.grouplist.default=192.168.32.116:8091
 # ==================================================seata end
 # ==================================================sentinel beg
 # \u662F\u5426\u5BF9\u8BF7\u6C42url\u4FDD\u62A4\uFF0C\u9ED8\u8BA4true
@@ -106,7 +106,7 @@ feign.sentinel.enabled=true
 # ==================================================sentinel end
 # ==================================================zipkin beg
 ## zipkin\u670D\u52A1\u5668\u7684\u5730\u5740
-#spring.zipkin.base-url=http://repo.emon.vip:9411
+#spring.zipkin.base-url=http://192.168.32.116:9411
 ## \u5173\u95ED\u670D\u52A1\u53D1\u73B0\uFF0C\u5426\u5219Spring Cloud\u4F1A\u628Azipkin\u7684url\u5F53\u505A\u670D\u52A1\u540D\u79F0
 #spring.zipkin.discovery-client-enabled=false
 ## \u8BBE\u7F6E\u4F7F\u7528http\u7684\u65B9\u5F0F\u4F20\u8F93\u6570\u636E
